--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,9 @@
             ],
             "styles": [
               "src/styles.css",
-              "src/bootstrap.css"
+              "src/bootstrap.css",
+              "src/fonts/glyphicons.css",
+              "src/fonts/glyphicons20.css"
             ],
             "scripts": []
           },
