3 files modified, 1 added, 1 deleted

--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,7 @@
             ],
             "styles": [
               "src/styles.css",
-              "src/bootstrap.css",
-              "src/fonts/glyphicons.css",
-              "src/fonts/glyphicons20.css"
+              "src/bootstrap.css"
             ],
             "scripts": []
           },
