--- a/angular.json
+++ b/angular.json
@@ -72,7 +72,8 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "styles.css"
+              "styles.css",
+              "assets/glyphicons.css"
             ],
             "scripts": [],
             "assets": [
